--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "aws s3 sync dist/angular-demo/ s3://angularmybucket1"
+    "deploy": "aws s3 sync dist/angular-demo/ s3://myangulars3"
   },
   "private": true,
   "dependencies": {
